--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="google-site-verification" content="7CER25utIwzYdNTcsPlQV9myVcOZwr-XkLdgZOZHreQ" />
 	<title>DL Games</title>
 	<link rel='stylesheet' href='style.css'>
 </head>
