--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class='zagolovok' align="center">Game Hub</div>
-	<div class='content'></div>
+	<div class='content'><br><br><br><img src="images/2.png" height="76%"></div>
 	<div class='game'>
 		<games><br>Pin-Pong</games>
 		<games><br>Fleppy Biord</games>
