--- a/123.html
+++ b/123.html
@@ -8,13 +8,9 @@
 	<div class='zagolovok' align="center">Game Hub</div>
 	<div class='content'><br><br><br><img src="images/2.png" height="76%"></div>
 	<div class='game'>
-		<games><br>Pin-Pong</games>
-		<games><br>Fleppy Biord</games>
-		<games><br>Snake</games>
-		<games><br>Sudoku</games>
 	</div>
 	<div class='socsety'>
-		<div class="block" align="center"><a id="one" href=''>Facebook</a>      <a id='two' href='123.html'>YouTube</a><br>©2020 DenLand</div>
+		<div class="block" align="center"><a id="one" href=''>Facebook</a>      <a id='two' href=''>YouTube</a><br>©2020 DenLand</div>
 	</div>
 </body>
 </html>
