--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<games><br>Sudoku</games>
 	</div>
 	<div class='socsety'>
-		<div class="block" align="center"><a id="one" href=''>Facebook</a>      <a id='two' href='123.html'>YouTube</a><br>©2020 DenLand</div>
+		<div class="block" align="center"><a id="one" href=''>Facebook</a>      <a id='two' href='https://www.youtube.com/'>YouTube</a><br>©2020 DenLand</div>
 	</div>
 </body>
 </html>
