--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class='game'>
 		<games><br>Pin-Pong</games>
 		<games><br>Fleppy Biord</games>
-		<a href="snake.html"><games><br>Snake</games></a>
+		<a href="Змійка/snake.html"><games><br>Snake</games></a>
 		<games><br>Sudoku</games>
 	</div>
 	<div class='socsety'>
