--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class='content'><br><br><br><img src="images/2.png" height="76%"></div>
 	<div class='game'>
 		<games><br>Pin-Pong</games>
-		<games><br>Fleppy Biord</games>
+		<a href="ФлеппіБьорд/index.html"><games><br>Fleppy Biord</games></a>
 		<a href="Змійка/snake.html"><games><br>Snake</games></a>
 		<games><br>Sudoku</games>
 	</div>
