--- a/ФлеппіБьорд/index.html
+++ b/ФлеппіБьорд/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flappy Bird using JS | by learnWD</title>
+    <title></title>
   </head>
   <body>
    <canvas id="canvas" width="288" height="512" align="center"></canvas>
