--- a/Змійка/snake.html
+++ b/Змійка/snake.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styleZmi.css">
 </head>
 <body>
-  <canvas id="game" width="608" height="608"></canvas>
+  <canvas id="game" width="608" height="608" align="center"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
