--- a/ФлеппіБьорд/index.html
+++ b/ФлеппіБьорд/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Флеппі Бьорд!</title>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
   </head>
   <body>
-   <canvas id="canvas" width="288" height="512" align="center"></canvas>
-   
+  	<div class='zagolovok' align="center">Flappy Biord!</div>
+	<br/>
+	<br/>
+   <div id="window"><canvas id="canvas" width="288" height="512" align="center"></canvas></div>
    <script src="flappyBird.js"></script>
   </body>
 </html>
