--- a/index.html
+++ b/index.html
@@ -3,16 +3,41 @@
 	<meta name="google-site-verification" content="7CER25utIwzYdNTcsPlQV9myVcOZwr-XkLdgZOZHreQ" />
 	<title>DL Games</title>
 	<link rel='stylesheet' href='style.css'>
+	<link rel='stylesheet' href='buttons.css'>
 </head>
 <body>
+	<section>
 	<div class='zagolovok' align="center">Game Hub</div>
 	<div class='content'><br><br><br><img src="images/2.png" height="76%"></div>
+		<div class="wave wave1"></div>
+		<div class="wave wave2"></div>
+		<div class="wave wave3"></div>
+		<div class="wave wave4"></div>
+	</section>
 	<div class='game'>
 		<games><br>Pin-Pong</games>
 		<a href="ФлеппіБьорд/index.html"><games><br>Fleppy Biord</games></a>
 		<a href="Змійка/snake.html"><games><br>Snake</games></a>
 		<games><br>Sudoku</games>
 	</div>
+<!-- 	<div class="wrapper">
+			<a href="" class="wave-btn">
+				<span class="wave-btn__text">Кнопка</span>
+				<span class="wave-btn__waves"></span>
+			</a>
+			<a href="" class="wave-btn">
+				<span class="wave-btn__text">Кнопка</span>
+				<span class="wave-btn__waves"></span>
+			</a>
+			<a href="" class="wave-btn">
+				<span class="wave-btn__text">Кнопка</span>
+				<span class="wave-btn__waves"></span>
+			</a>
+			<a href="" class="wave-btn">
+				<span class="wave-btn__text">Кнопка</span>
+				<span class="wave-btn__waves"></span>
+			</a>
+		</div> -->
 	<div class='socsety'>
 		<div class="block" align="center"><a id="one" href=''>Facebook</a>      <a id='two' href='https://www.youtube.com/'>YouTube</a><br>©2020 DenLand</div>
 	</div>
