--- a/ФлеппіБьорд/index.html
+++ b/ФлеппіБьорд/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>Флеппі Бьорд!</title>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link type="text/css" rel="stylesheet" href="style.css">
   </head>
   <body>
-  	<div class='zagolovok' align="center">Flappy Biord!</div>
+  	<div class='zagolovok2' align="center">Flappy Biord!</div>
 	<br/>
 	<br/>
-   <div id="window"><canvas id="canvas" width="288" height="512" align="center"></canvas></div>
+   <div id="window"><canvas id="2canvas" width="288" height="512" align="center"></canvas></div>
    <script src="flappyBird.js"></script>
   </body>
 </html>
