--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
 	<section>
-	<div class='zagolovok' align="center">Game Hub</div>
+	<div class='zagolovok' align="center"><nav>
+  <ul class="menu">
+    <li><a href="#!">Home</a></li>
+    <li><a href="#!">About</a></li>
+    <li><a href="#!">Contact</a></li>
+    <li><a href="#!">Faq</a></li>
+  </ul>
+</nav>Game Hub</div>
 	<div class='content'><br><br><br><img src="images/2.png" height="76%"></div>
 		<div class="wave wave1"></div>
 		<div class="wave wave2"></div>
