--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 	<meta name="google-site-verification" content="7CER25utIwzYdNTcsPlQV9myVcOZwr-XkLdgZOZHreQ" />
 	<title>DL Games</title>
 	<link rel='stylesheet' href='style.css'>
-	<link rel='stylesheet' href='buttons.css'>
+	<!-- <link rel='stylesheet' href='buttons.css'> -->
+	<link rel="stylesheet" href="pstyle.css">
 </head>
 <body>
+	 <div class="preloader"><svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+	 	<path fill="currentColor"
+        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
+        </path></svg></div>
+  <script>
+    window.onload = function () {
+      document.body.classList.add('loaded_hiding');
+      window.setTimeout(function () {
+        document.body.classList.add('loaded');
+        document.body.classList.remove('loaded_hiding');
+      }, 500);
+    }
+  </script></div>
+
+
 	<section>
-	<div class='zagolovok' align="center"><nav>
-  <ul class="menu">
-    <li><a href="#!">Home</a></li>
-    <li><a href="#!">About</a></li>
-    <li><a href="#!">Contact</a></li>
-    <li><a href="#!">Faq</a></li>
-  </ul>
-</nav>Game Hub</div>
+	<div class='zagolovok' align="center">Game Hub</div>
 	<div class='content'><br><br><br><img src="images/2.png" height="76%"></div>
 		<div class="wave wave1"></div>
 		<div class="wave wave2"></div>
