--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 		<div class="wave wave4"></div>
 	</section>
 	<div class='game'>
-		<games><br>Pin-Pong</games>
+		<a href="Atari/atari.html"><games><br>Arkanoid</games></a>
 		<a href="ФлеппіБьорд/index.html"><games><br>Fleppy Biord</games></a>
 		<a href="Змійка/snake.html"><games><br>Snake</games></a>
-		<games><br>Sudoku</games>
+		<a href="puzzle-game/index.html"><games><br>Puzzle game</games></a>
 	</div>
 <!-- 	<div class="wrapper">
 			<a href="" class="wave-btn">
