--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<section>
 	<div class='zagolovok' align="center">Game Hub</div>
 	<div class='content'><br><br><br><img src="images/2.png" height="76%"></div>
+	<iframe width="54%" height="60%" src="https://www.youtube.com/embed/cXibbjRHaFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<div class="wave wave1"></div>
 		<div class="wave wave2"></div>
 		<div class="wave wave3"></div>
