--- a/Змійка/snake.html
+++ b/Змійка/snake.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Игра на JavaScript</title>
+  <title>Snake!</title>
   <link rel="stylesheet" href="styleZmi.css">
   <link rel="stylesheet" href="pstyle.css">
 </head>
@@ -25,7 +25,6 @@
 
 
 	<div class='zagolovok' align="center">Snake</div>
-  <br>
  	<div id="window"><canvas id="game" width="608" height="608"></canvas></div>
  	<script src="script.js"></script>
   <div id="control"><br><img src="Images/control.png"><br><button value="Restart" onclick="restart()" name="send">rtjfhm</button></div>
