--- a/puzzle-game/index.html
+++ b/puzzle-game/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <div class='zagolovok' align="center">Arkanoid</div>
     <div class="game">
       <div class="grid">
         <button>1</button>
