--- a/Змійка/snake.html
+++ b/Змійка/snake.html
@@ -27,7 +27,7 @@
 	<div class='zagolovok' align="center">Snake</div>
  	<div id="window"><canvas id="game" width="608" height="608"></canvas></div>
  	<script src="script.js"></script>
-  <div id="control"><br><img src="Images/control.png"><br><button value="Restart" onclick="restart()" name="send">rtjfhm</button></div>
+  <div id="control"><br><img src="Images/control.png"><br><button value="Restart" onclick="restart()" name="send">Рестарт | Restart</button></div>
  	<!-- <script type="text/javascript">
 var count = -1;
 var counter;
@@ -65,5 +65,6 @@ function animation() {
 animation();
 </script>
 </center> -->
+<marquee behavior="alternate" direction="right" id="reco">best score: </marquee>
 </body>
 </html>
