--- a/Змійка/snake.html
+++ b/Змійка/snake.html
@@ -65,6 +65,6 @@ function animation() {
 animation();
 </script>
 </center> -->
-<marquee behavior="alternate" direction="right" id="reco">best score: </marquee>
+<marquee behavior="alternate" direction="right" id="reco"></marquee>
 </body>
 </html>
